Fixed CSS bug that messed up spacing

--- a/app/assets/stylesheets/ridiculous.css
+++ b/app/assets/stylesheets/ridiculous.css
@@ -55,6 +55,7 @@ ul {
     background: none repeat scroll 0 0 #E8F9F9;
     border-bottom: 3px solid #9BD8D7;
     border-radius: 8px;
+    height: 168px;
 }
 
 .supplier_card strong{
